[gd_scene load_steps=4 format=3 uid="uid://dy2du658i44d5"]

[ext_resource type="Script" path="res://scenes/surface/surface_exploration_container.gd" id="1_ptjbq"]
[ext_resource type="PackedScene" uid="uid://b8ystkhcrj80s" path="res://scenes/surface/surface_sky_background_scene.tscn" id="2_c3eb5"]
[ext_resource type="PackedScene" uid="uid://c3d6ixw7o8jrw" path="res://scenes/surface/surface_exploration.tscn" id="3_bkr2g"]

[node name="SurfaceExplorationComposition" type="Node3D"]
script = ExtResource("1_ptjbq")

[node name="SubViewportContainer_Sky" type="SubViewportContainer" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
mouse_force_pass_scroll_events = false

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer_Sky"]
own_world_3d = true
handle_input_locally = false
physics_object_picking = true
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="SurfaceSkyBackgroundScene" parent="SubViewportContainer_Sky/SubViewport" instance=ExtResource("2_c3eb5")]

[node name="SubViewportContainer_Surface" type="SubViewportContainer" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
mouse_force_pass_scroll_events = false

[node name="SurfaceExplorationViewPort" type="SubViewport" parent="SubViewportContainer_Surface"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
physics_object_picking = true
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="SurfaceExploration" parent="SubViewportContainer_Surface/SurfaceExplorationViewPort" instance=ExtResource("3_bkr2g")]
unique_name_in_owner = true

[node name="DebuggingTools" type="CanvasLayer" parent="."]
visible = false

[node name="PlanetHeightmap" type="TextureRect" parent="DebuggingTools"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -20.0
offset_right = 140.0
offset_bottom = 20.0
grow_vertical = 2
rotation = 1.5708
scale = Vector2(1, -1)

[node name="PlanetRuinsChart" type="TextureRect" parent="DebuggingTools"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = 260.0
offset_right = 140.0
offset_bottom = 300.0
grow_vertical = 2
rotation = 1.5708
scale = Vector2(1, -1)

[node name="PaletteImage" type="TextureRect" parent="DebuggingTools"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -340.0
offset_right = 140.0
offset_bottom = -300.0
grow_vertical = 2
